[package]
name = "tmux-ui"
version = "0.1.0"
edition = "2021"
authors = ["npsg02"]
description = "A terminal user interface (TUI) for managing tmux sessions, windows, and panes"
license = "MIT OR Apache-2.0"
repository = "https://github.com/npsg02/tmux-ui"

[dependencies]
ratatui = "0.24"
crossterm = "0.27"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
